[feature/wedpro-88] 상품 후원 api 구현 완료 (#30)
* [feature/WEDPRO-88] uuid 제공 받아 쿠키에 boardsId를 세팅하는 컨트롤러 개발 완료 및 테스트 코드 작성 완료

* [feature/WEDPRO-88] cookie에 추가 설정 적용

* [feature/WEDPRO-88] cookie 설정 추가

* [feature/WEDPRO-88] cookie 설정 수정

* [feature/WEDPRO-88] cors 설정 수정

* [feature/WEDPRO-88] cookie 설정 중

* [feature/WEDPRO-88] cookie 설정 중

* [feature/WEDPRO-88] 쿠키가 아닌 header에 담는 것으로 논의 완료

* [feature/WEDPRO-88] GuestInfoJwtUtil 개발 진행 중

* [feature/WEDPRO-88] header에 정보를 담는데 필요한 클래스 및 UuidController 수정 완료

* [feature/WEDPRO-88] InvitationController 헤더 이용하도록 수정 완료

* [feature/WEDPRO-88] git 꼬임 일단 해결...

* [feature/WEDPRO-88] 후원자 관련 api 구현 및 테스트 코드 작성 완료